1512445023 | 27 files | M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_bulgarian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_dutch.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_greek.txt,  M tools/steamvr_environments/game/steamtours/pak01
https://steamdb.info/patchnotes/2383505/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt
@@ -3017,5 +3017,13 @@
 "[english]Quest_TF2Yeti"	"Yeti Quest"
 "Quest_TF2Yeti_Desc"	"Encontre esta fera mítica que espreita no Monte Rainier."
 "[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"Pizza é Vida!"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"Um pedaço delicioso que sobrou do sequestrador.\n\nDestravada ao jogar Deserving Life."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Martelo de Thor"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"O martelo perfeito para um deus.\n\\Destravado ao jogar Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
 }
 }
