--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_bulgarian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_bulgarian.txt
@@ -2969,7 +2969,7 @@
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
 "VR_PhysicsProp_RezHeroFigurine_Desc"	"Аватар на играча за легендарната екшън игра.\n\nОтключва се, като играете Rez Infinite."
 "[english]VR_PhysicsProp_RezHeroFigurine_Desc"	"The player avatar for the legendary action-shooter.\n\nUnlocked by playing Rez Infinite."
-"UGCHiddenLabel"	"Създадено от потребители съдържание е скрито. Можете да промените това в „Настройките“."
+"UGCHiddenLabel"	"Генерираното от потребителите съдържание е скрито. Можете да промените това в „Настройките“."
 "[english]UGCHiddenLabel"	"User generated content is hidden. You can change this in Settings."
 "VR_Avatar_Wearable_GornWingedHelmet"	"Шлем с крила"
 "[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
@@ -3021,5 +3021,23 @@
 "[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
 "VR_PhysicsProp_DeservingLifePizza_Desc"	"Вкусен остатък от похитителя.\n\nОтключва се, като играете Deserving Life."
 "[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Чукът на Тор"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Чук, подходящ за бог.\n\nОтключва се, като играете Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Помощ"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"Как да направите снимки в SteamVR"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"С цел да направите снимка, докато сте в дадена игра, натиснете системния бутон и спусъците едновременно.\n\nЩом излезете от играта, ще Ви бъде представен интерфейсът за управление на Steam снимките, където ще сте способни да ги споделите публично."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"С цел да направите снимка, докато сте в дадена игра, натиснете левия аналогов стик и спусъците едновременно.\n\nЩом излезете от играта, ще Ви бъде представен интерфейсът за управление на Steam снимките, където ще сте способни да ги споделите публично."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"С цел да направите снимка, докато сте в дадена игра, натиснете левия бутон за менюто и спусъците едновременно.\n\nЩом излезете от играта, ще Ви бъде представен интерфейсът за управление на Steam снимките, където ще сте способни да ги споделите публично."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Изглежда, че все още не сте споделили никакви публични снимки.\n\nС цел да го сторите, направете снимка, докато сте в игра. След това използвайте интерфейса за управление на снимките, така че да ги споделите публично в Steam. Изберете връзката „Помощ“ по-горе, за да научите как да направите снимки във ВР.\n\nСъщо така можете да изберете раздела „От общността“ по-горе, така че да прегледате и използвате популярни публични снимки от общността."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Изглежда, че все още не сте споделили никакви публични художествени творби.\n\nС цел да внесете такива в SteamVR Home, ще е нужно да качите своите художествени творби в Steam от обществения център за дадената игра и да ги направите публично видими.\n\nСъщо така можете да изберете раздела „От общността“ по-горе, така че да прегледате и използвате популярни публични художествени творби от общността."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
