--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
@@ -3020,5 +3020,27 @@
 "[english]Quest_TF2Yeti"	"Yeti Quest"
 "Quest_TF2Yeti_Desc"	"Yettiho odemknete tak, že jej najdete na hoře Mount Rainier."
 "[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"Chutná pizza"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"Zbytek večeře od únosce.\n\nDárek ze hry Deserving Life."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Thorovo kladivo"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Kladivo hodné Boha.\n\nDárek ze hry Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Nápověda"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"Jak pořídit snímek v režimu SteamVR"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"Abyste ve hře pořídili snímek, stiskněte zároveň tlačítko „System“ a spoušť ovladače.\n\nAž poté hru ukončíte, otevře se správce snímků, odkud budete moci snímky veřejně sdílet."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"Abyste ve hře pořídili snímek, stiskněte zároveň levou páčku a spoušť ovladače.\n\nAž poté hru ukončíte, otevře se správce snímků, odkud budete moci snímky veřejně sdílet."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"Abyste ve hře pořídili snímek, stiskněte zároveň levé tlačítko „Menu“ a spoušť ovladače.\n\nAž poté hru ukončíte, otevře se správce snímků, odkud budete moci snímky veřejně sdílet."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Zdá se, že jste zatím veřejně nesdíleli žádný snímek. \n\nChcete-li sdílet snímek, pořiďte jej ve hře a následně jej pomocí správce snímků sdílejte v komunitě služby Steam. Pokud nevíte jak na to, vyberte výše možnost „Nápověda“. \n\nTaké můžete přejít do záložky „Od komunity“ a prohlédnout si populární veřejné snímky od ostatních uživatelů."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Zdá se, že jste zatím veřejně nesdíleli žádný obrázek. \n\nChcete-li do virtuálního domova nahrát nějaký obrázek, budete jej muset nejprve nahrát do herního centra v komunitě služby Steam a učinit jej veřejně viditelným. \n\nTaké můžete přejít do záložky „Od komunity“ a prohlédnout si populární veřejné obrázky od ostatních uživatelů."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
