--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt
@@ -3011,5 +3011,23 @@
 "[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
 "VR_PhysicsProp_DeservingLifePizza_Desc"	"En lækker rest fra kidnapperen.\n\nOplåst ved at spille Deserving Life."
 "[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Thors hammer"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"En hammer til en gud.\n\nOplåst ved at spille Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Hjælp"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"Sådan tager du skærmbilleder i SteamVR"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"For at tage et skærmbillede i et spil, skal du trykke på system- og aftrækkerknappen på samme tid.\n\nNår du afslutter spillet, vises Steams skærmbilledegrænseflade, hvor du kan dele skærmbillederne offentligt."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"For at tage et skærmbillede i et spil, skal du trykke på venstre styrepind og aftrækkerknappen på samme tid.\n\nNår du afslutter spillet, vises Steams skærmbilledegrænseflade, hvor du kan dele skærmbillederne offentligt."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"For at tage et skærmbillede i et spil, skal du trykke på venstre menu- og aftrækkerknap på samme tid.\n\nNår du afslutter spillet, vises Steams skærmbilledegrænseflade, hvor du kan dele skærmbillederne offentligt."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Det ser ud til, at du ikke har delt nogen offentlige skærmbilleder endnu. \n\nFor at dele skærmbilleder skal du tage et skærmbillede i spillet og bruge Steams skærmbilledegrænseflade til at dele det på Steam offentligt. Vælg \"Hjælp\" ovenfor for at lære mere om, hvordan man tager skærmbilleder i VR. \n\nDu kan også vælge fanen \"Fra fællesskabet\" overfor for at se og bruge populære offentlige skærmbilleder fra fællesskabet."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Det ser ud til, at du ikke har delt nogen offentlige illustrationer endnu. \n\nFor at få vist dine illustrationer i dit hjemsted i SteamVR, skal du uploade dine illustrationer til Steam fra et spils fællesskabshub og gøre det offentligt synligt\n\nDu kan også vælge fanen \"Fra fællesskabet\" overfor for at se og bruge populære offentlige illustrationer fra fællesskabet."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
