--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt
@@ -113,9 +113,9 @@
 "[english]DOTA_Workshop_Publish_Visibility_FriendsOnly"	"Friends-Only"
 "DOTA_Workshop_Publish_Visibility_Hidden"	"Piilotettu"
 "[english]DOTA_Workshop_Publish_Visibility_Hidden"	"Hidden"
-"DOTA_Workshop_Publish_AcceptAgreement"	"Hyväksyn Steam Workshop Contribution Agreement -sopimuksen ehdot."
+"DOTA_Workshop_Publish_AcceptAgreement"	"Hyväksyn Steam Workshop -osallistumissopimuksen ehdot."
 "[english]DOTA_Workshop_Publish_AcceptAgreement"	"I accept the terms of the Steam Workshop Contribution Agreement."
-"DOTA_Workshop_Publish_ViewAgreement"	"Lue sopimus"
+"DOTA_Workshop_Publish_ViewAgreement"	"Näytä sopimus"
 "[english]DOTA_Workshop_Publish_ViewAgreement"	"View Agreement"
 "DOTA_Workshop_Publish_Cancel"	"Peruuta"
 "[english]DOTA_Workshop_Publish_Cancel"	"Cancel"
@@ -155,7 +155,7 @@
 "[english]DOTA_Workshop_Publish_SuccessMessage"	"The item has been uploaded to the Steam Workshop!"
 "DOTA_Workshop_Publish_Updating"	"Päivitetään, odota hetki..."
 "[english]DOTA_Workshop_Publish_Updating"	"Updating, please wait..."
-"DOTA_Workshop_Publish_SuccessTextNeedsToAccept"	"Esine on ladattu Workshopiin, mutta voit näyttää sen julkisesti muille käyttäjille vasta hyväksyttyäsi viimeisimmän Workshop Legal Agreementin Workshopin nettisivuilta."
+"DOTA_Workshop_Publish_SuccessTextNeedsToAccept"	"Esine on ladattu Workshopiin, mutta voit näyttää sen julkisesti muille käyttäjille vasta hyväksyttyäsi viimeisimmän Steam Workshop -sopimuksen Workshopin nettisivuilta."
 "[english]DOTA_Workshop_Publish_SuccessTextNeedsToAccept"	"The item has been uploaded to the Workshop, but to make it visible to other users you must accept the latest Workshop Legal Agreement on the Workshop webpage."
 "DOTA_Workshop_Publish_FolderChangeTitle"	"Jatka lataamista?"
 "[english]DOTA_Workshop_Publish_FolderChangeTitle"	"Continue with upload?"
@@ -1645,7 +1645,7 @@
 "[english]TutorialQuest_Tile2_Desc"	"Customize your Avatar with different heads, wearables, and colors."
 "TutorialQuest_Tile3_Desc"	"Käytä Steamin vaihtojärjestelmää vaihtaaksesi esineitä muiden pelaajien kesken."
 "[english]TutorialQuest_Tile3_Desc"	"Use the Steam Economy to trade with other players for different items."
-"TutorialQuest_Bottom_Desc"	"Siirry kojelaudalta löytyviin Tehtäviin nähdäksesi saatavilla olevat tehtävät."
+"TutorialQuest_Bottom_Desc"	"Siirry työpöydältä löytyviin Tehtäviin nähdäksesi saatavilla olevat tehtävät."
 "[english]TutorialQuest_Bottom_Desc"	"Go to 'Quests' from the Dashboard to see a list of available quests."
 "TutorialWelcome_Tile1_Touch_Desc"	"Tervetuloa SteamVR:ään!"
 "[english]TutorialWelcome_Tile1_Touch_Desc"	"Welcome to SteamVR!"
@@ -1687,7 +1687,7 @@
 "[english]Quest_Label"	" Quest"
 "TutorialPublic_Title"	"Julkiset huoneet"
 "[english]TutorialPublic_Title"	"Public Rooms"
-"TutorialPublic_Tile1_Desc"	"Tapaa muita pelaajia käyttämällä Kaverit-paneelia kojelaudan oikealla puolella."
+"TutorialPublic_Tile1_Desc"	"Tapaa muita pelaajia käyttämällä Kaverit-paneelia työpöydän oikealla puolella."
 "[english]TutorialPublic_Tile1_Desc"	"Meet up with other players by using the Social panel to the right of the Dashboard."
 "TutorialPublic_Tile2_Desc"	"Näet tästä päivitetyn julkisten huoneiden listan sekä kaikki Steam-kaverisi."
 "[english]TutorialPublic_Tile2_Desc"	"Here you can see a list of all current public rooms, and all of your Steam friends."
@@ -1697,7 +1697,7 @@
 "[english]TutorialPublic_Bottom_Desc"	"Public rooms can also be accessed from the environment list directly.\nJust look for the light blue social icon."
 "TutorialProps_Title"	"Lavasteiden käyttö"
 "[english]TutorialProps_Title"	"Using Props"
-"TutorialProps_Tile1_Desc"	"Esineitä pääsee käyttämään kojelaudan Ympäristöt-paneelista."
+"TutorialProps_Tile1_Desc"	"Esineitä pääsee käyttämään työpöydän Ympäristöt-paneelista."
 "[english]TutorialProps_Tile1_Desc"	"Props are accessed from the Environments panel in the Dashboard."
 "TutorialProps_Tile2_Desc"	"Poimi esine valitsemalla se valikosta ohjaimen liipaisimella."
 "[english]TutorialProps_Tile2_Desc"	"Spawn a prop by selecting it from the menu with your trigger."
@@ -1707,7 +1707,7 @@
 "[english]TutorialProps_Bottom_Desc"	"Pull and hold the trigger to spawn a prop directly into your hand.\nRelease the trigger to drop the prop."
 "TutorialTools_Title"	"Työkalujen käyttö"
 "[english]TutorialTools_Title"	"Using Tools"
-"TutorialTools_Tile1_Desc"	"Työkalut löytyvät kojelaudan Esineet-paneelista."
+"TutorialTools_Tile1_Desc"	"Työkalut löytyvät työpöydän Esineet-paneelista."
 "[english]TutorialTools_Tile1_Desc"	"Tools are accessed from the Things panel in the Dashboard."
 "TutorialTools_Tile2_Desc"	"Ota työkalu käyttöön valitsemalla se valikosta ohjaimen liipaisimella."
 "[english]TutorialTools_Tile2_Desc"	"Equip a tool by selecting it from the menu with your trigger."
@@ -1717,7 +1717,7 @@
 "[english]TutorialTools_Bottom_Desc"	"There is no need to hold the trigger down to hold a tool.\nTools are auto-equipped when selected."
 "TutorialAvatar_Title"	"Avatarin räätälöinti"
 "[english]TutorialAvatar_Title"	"Customizing Your Avatar"
-"TutorialAvatar_Tile1_Desc"	"Valitse pääsi ja käsiesi malli sekä väri valitsemalla kojelaudan 'Avatarit'-painike."
+"TutorialAvatar_Tile1_Desc"	"Valitse pääsi ja käsiesi malli sekä väri valitsemalla työpöydän Avatarit-painike."
 "[english]TutorialAvatar_Tile1_Desc"	"Pick your Head and Hand shape and color by selecting the 'Avatars' button on the Dashboard."
 "TutorialAvatar_Tile2_Desc"	"Siirry Muokkaus-tilaan pukeaksesi asusteita ja esineitä päähäsi."
 "[english]TutorialAvatar_Tile2_Desc"	"Enter 'Customize' mode to place wearables and props on your head."
@@ -1949,7 +1949,7 @@
 "[english]VR_PhysicsProp_StuffedSnake_Desc"	"A stuffed animal snake."
 "VR_PropTool_FreezeTool"	"Monitoimityökalu"
 "[english]VR_PropTool_FreezeTool"	"Multi-Tool"
-"VR_PropTool_FreezeTool_Desc"	"Tällä työkalulla voi kiinnittää, irroittaa, kopioida ja poistaa esineitä maailmasta."
+"VR_PropTool_FreezeTool_Desc"	"Tällä työkalulla voi jähmettää tai vapauttaa esineitä ja kopioida tai poistaa niitä maailmasta."
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter-lelu"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
@@ -2339,9 +2339,9 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE-ESINEET"
+"HTCPromoTitle"	"VIVE-YMPÄRISTÖ"
 "[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Muista käydä katsomassa Viven omistajien Vive-avatar ja esine."
+"HTCPromoDesc"	"Tutustu Driftwoodiin, Vive Creative Labsin luomaan ympäristöön."
 "[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"VALVE-YMPÄRISTÖT"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2963,7 +2963,7 @@
 "[english]VR_PhysicsProp_RacketNxFigurine_Desc"	"A miniature figurine of the Racket: Nx's Alien Robot Lizard with Sound Activated Brain (TM).\n\n*Sound Activated Brain not included.\n\nUnlocked by playing Racket: Nx."
 "VR_Avatar_DuckHuntDogHead"	"Koiranaamari"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
-"VR_Avatar_DuckHuntDogHead_Desc"	"Ankkojen pyyntikauden metsästyskoiran maskottinaamari. Loistava kemuhin, omien kasvojen peittämiseen tai kavereiden pelästyttelyyn. \n\nAvataan pelaamalla Duck Hunt -peliä."
+"VR_Avatar_DuckHuntDogHead_Desc"	"Ankkojen pyyntikauden metsästyskoiran maskottinaamari. Loistava kemuhin, omien kasvojen peittämiseen tai kavereiden pelästyttelyyn.\n\nAvataan pelaamalla Duck Season -peliä."
 "[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite -avatar"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
@@ -2979,9 +2979,9 @@
 "[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
 "VR_Avatar_WindowsMR_Controllers_Desc"	"Windowsin tehostetun todellisuuden ohjaimet"
 "[english]VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR controllers"
-"TutorialWelcome_Tile1_WinMR_Desc"	"Tervetuloa SteamVR:ään!"
+"TutorialWelcome_Tile1_WinMR_Desc"	"Tervetuloa SteamVR-palveluun!"
 "[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
-"TutorialWelcome_Tile2_WinMR_Desc"	"SteamVR:ssä voit kavereittesi kanssa vierailla oikeissa tai mielikuvituspaikoissa."
+"TutorialWelcome_Tile2_WinMR_Desc"	"SteamVR:ssä voit vierailla oikeissa ja mielikuvituspaikoissa kaveriesi kanssa."
 "[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
 "TutorialWelcome_Tile3_WinMR_Desc"	"Avaa ja sulje tämä valikko ohjaimesi valikkopainikkeella."
 "[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
@@ -2991,7 +2991,53 @@
 "[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
 "TutorialTeleport_Tile3_WinMR_Desc"	"Päästämällä ohjaussauvasta irti teleporttaat vihreään ympyrään."
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
-"TutorialTeleport_WinMR_Bottom_Desc"	"Teleporttauskaari muuttuu punaiseksi, jos sen et voi siirtyä sen osoittamaan kohteeseen."
+"TutorialTeleport_WinMR_Bottom_Desc"	"Teleportin kaaresta tulee punainen, jos et voi teleportata kohteeseen."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Magi-hahmo"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Mystisen MAGI-tytön kokovartalohahmo OVERTURN-pelistä.\n\nAvataan pelaamalla OVERTURN-peliä."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Paavo Päärynä"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Makeeta.\n\nAvataan pelaamalla Smashbox Arenaa."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Ystävällinen, kolmiulotteisesti maalaava dinosaurus.\n\nAvattu pelaamalla Tilt Brush-peliä."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"Mt. Rainier"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"Korkein vuori Washingtonin osavaltiossa, Yhdysvalloissa"
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"Lumimies"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"Pyhän tiibetiläisen kansanperinteen mukaan jalo Jeti asustaa Nepalissa Himalajan alueella. Team Fortress 2:n mukaan niitä löytyy Jungle Infernosta. Joten mitä se ryysyläinen touhusi Washingtonin osavaltiossa?"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"Jeti-tehtävä"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"Löydä tämä myyttinen peto väijymästä Mount Rainierin rinteillä."
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"Pizza on poikaa!"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"Kidnappaajan herkulliset jämät.\n\nAvataan pelaamalla Deserving Life -peliä."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Ukon vasara"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Vasara, joka on kuin luotu jumalan käteen.\n\nAvattu pelaamalla peliä Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Ohjeet"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"Kuvankaappausten ottaminen SteamVR:ssä"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"Paina yhtä aikaa järjestelmä- ja liipaisinpainiketta ottaaksesi kuvankaappauksen pelissä.\n\nLopetettuasi pelin näet Steamin kuvankaappauksien hallintatyökalun käyttöliittymän, jossa voit jakaa kuvankaappauksesi julkisesti."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"Paina yhtä aikaa vasenta ohjainsauvaa ja liipaisinpainiketta ottaaksesi kuvankaappauksen pelissä.\n\nLopetettuasi pelin näet Steamin kuvankaappauksien hallintatyökalun käyttöliittymän, jossa voit jakaa kuvankaappauksesi julkisesti."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"Paina yhtä aikaa vasenta valikko- ja liipaisinpainiketta ottaaksesi kuvankaappauksen pelissä.\n\nLopetettuasi pelin näet Steamin kuvankaappauksien hallintatyökalun käyttöliittymän, jossa voit jakaa kuvankaappauksesi julkisesti."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Et ole vielä jakanut yhtään kuvankaappausta.\n\nJakaaksesi kuvankaappauksia ota kuvakaappaus pelin aikana ja käytä kuvankaappausten hallintatyökalua jakaaksesi sen Steamissä julkisesti. Valitse Ohjeet yläpuolelta tietääksesi enemmän kuvankaappausten ottamisesta VR:ssä.\n\nVoit myös valita yläpuolen Yhteisöltä-välilehden nähdäksesi ja käyttääksesi suosittuja, yhteisön jakamia kuvankaappauksia."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Et ole vielä jakanut julkisesti yhtään taideteosta.\n\nTuodaksesi taiteesi SteamVR Home:een lataa taideteoksesi Steamiin pelin yhteisökeskuksesta ja aseta se julkisesti näkyväksi.\n\nVoit myös valita Yhteisöltä-välilehden yläpuolelta ja käyttää yhteisön luomia taideteoksia."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
