--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt
@@ -1418,7 +1418,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]VR_Avatar_Wearable_PropellerBeanie001"	"Propeller Beanie"
 "VR_Avatar_Wearable_PropellerBeanie001_Desc"	"Bon faut pas rêver, ce bonnet ne va pas vous transformer en hélicoptère."
 "[english]VR_Avatar_Wearable_PropellerBeanie001_Desc"	"Unfortunately, this hat will not make its wearer capable of independent flight."
-"VR_Avatar_Wearable_ClockwerkMask001"	"Masque de Clockwerk"
+"VR_Avatar_Wearable_ClockwerkMask001"	"Masque du Clockwerk"
 "[english]VR_Avatar_Wearable_ClockwerkMask001"	"Clockwerk Mask"
 "VR_Avatar_Wearable_ClockwerkMask001_Desc"	"« Nécessite un peu d’assemblage »\n\nVu dans Dota 2."
 "[english]VR_Avatar_Wearable_ClockwerkMask001_Desc"	"'Some assembly required.'\n\nAs seen in Dota 2."
@@ -1654,7 +1654,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]TutorialWelcome_Tile1_Touch_Desc"	"Welcome to SteamVR!"
 "TutorialWelcome_Tile2_Touch_Desc"	"Dans SteamVR, vous pouvez visiter des lieux réels et imaginaires avec des amis."
 "[english]TutorialWelcome_Tile2_Touch_Desc"	"In SteamVR you can visit real and imaginary places with friends."
-"TutorialWelcome_Tile3_Touch_Desc"	"Pour ouvrir et fermer ce menu, utilisez le bouton B (ou Y) de votre contrôleur."
+"TutorialWelcome_Tile3_Touch_Desc"	"Pour ouvrir et fermer ce menu, appuyez sur le bouton B (ou Y) de votre contrôleur."
 "[english]TutorialWelcome_Tile3_Touch_Desc"	"To open and close this menu, use the B (or Y) button on your controller."
 "TutorialWelcome_Touch_Bottom_Desc"	"N'oubliez pas d'aller sur le Workshop pour télécharger d'autres Environnements mis à disposition par la communauté."
 "[english]TutorialWelcome_Touch_Bottom_Desc"	"Don't forget to visit the Workshop to download more environments from the community."
@@ -2472,19 +2472,19 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]Dashboard_Whats_New_2"	"To learn more about exploring, customizing, and meeting up with friends, select Tutorials."
 "PowerOnText"	"ALLUMER"
 "[english]PowerOnText"	"POWER ON"
-"Quest_PeanutGallery_Snake"	"Quête du serpent en peluche"
+"Quest_PeanutGallery_Snake"	"Quête - Serpent en peluche"
 "[english]Quest_PeanutGallery_Snake"	"Stuffed Snake Quest"
 "Quest_PeanutGallery_Snake_Desc"	"Gagnez le serpent en peluche en obtenant au moins 1 000 points dans le stand Peanut."
 "[english]Quest_PeanutGallery_Snake_Desc"	"Win the Stuffed Snake prize by scoring at least 1000 points in Peanut Gallery."
-"Quest_PeanutGallery_Alligator"	"Quête de l'alligator en peluche"
+"Quest_PeanutGallery_Alligator"	"Quête - Alligator en peluche"
 "[english]Quest_PeanutGallery_Alligator"	"Stuffed Alligator Quest"
 "Quest_PeanutGallery_Alligator_Desc"	"Gagnez l'alligator en peluche en obtenant au moins 1 500 points dans le stand Peanut."
 "[english]Quest_PeanutGallery_Alligator_Desc"	"Win the Stuffed Alligator prize by scoring at least 1500 points in Peanut Gallery."
-"Quest_PeanutGallery_Giraffe"	"Quête de la girafe en peluche"
+"Quest_PeanutGallery_Giraffe"	"Quête - Girafe en peluche"
 "[english]Quest_PeanutGallery_Giraffe"	"Stuffed Giraffe Quest"
 "Quest_PeanutGallery_Giraffe_Desc"	"Gagnez la girafe en peluche en obtenant au moins 2 000 points dans le stand Peanut."
 "[english]Quest_PeanutGallery_Giraffe_Desc"	"Win the Stuffed Giraffe prize by scoring at least 2000 points in Peanut Gallery."
-"Quest_PeanutGallery_Elephant"	"Quête de l'éléphant en peluche"
+"Quest_PeanutGallery_Elephant"	"Quête - Éléphant en peluche"
 "[english]Quest_PeanutGallery_Elephant"	"Stuffed Elephant Quest"
 "Quest_PeanutGallery_Elephant_Desc"	"Gagnez l'éléphant en peluche en obtenant au moins 2 500 points dans le stand Peanut."
 "[english]Quest_PeanutGallery_Elephant_Desc"	"Win the Stuffed Elephant prize by scoring at least 2500 points in Peanut Gallery."
@@ -2970,13 +2970,13 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Figurine de Rez Infinite"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
-"VR_PhysicsProp_RezHeroFigurine_Desc"	"La figurine du personnage d'un jeu d'action-shooter légendaire.\n\nDébloqué pour avoir joué à Rez Infinite."
+"VR_PhysicsProp_RezHeroFigurine_Desc"	"La figurine du personnage d'un jeu d'action-shooter légendaire.\n\nDébloquée pour avoir joué à Rez Infinite."
 "[english]VR_PhysicsProp_RezHeroFigurine_Desc"	"The player avatar for the legendary action-shooter.\n\nUnlocked by playing Rez Infinite."
 "UGCHiddenLabel"	"Le contenu créé par la communauté est caché. Cette option peut être modifiée dans les paramètres."
 "[english]UGCHiddenLabel"	"User generated content is hidden. You can change this in Settings."
 "VR_Avatar_Wearable_GornWingedHelmet"	"Casque ailé"
 "[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
-"VR_Avatar_Wearable_GornWingedHelmet_Desc"	"Le casque ailé, arraché de la tête du « Général » lui-même. A en juger par l'odeur, il n'a jamais été lavé. Fièrement prêté par un gladiateur victorieux de GORN.\n\nDébloqué en jouant GORN."
+"VR_Avatar_Wearable_GornWingedHelmet_Desc"	"Le casque ailé, arraché de la tête du « Général » lui-même. À en juger par l'odeur, il n'a jamais été lavé. Fièrement prêté par un gladiateur victorieux de GORN.\n\nDébloqué en jouant GORN."
 "[english]VR_Avatar_Wearable_GornWingedHelmet_Desc"	"The Winged Helmet, torn from the head of 'The General' himself. Judging by smell, never been washed. Proudly on loan from a victorious GORN gladiator.\n\nUnlocked by playing GORN."
 "VR_Avatar_WindowsMR_Controllers"	"Contrôleurs Windows MR"
 "[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
@@ -3020,5 +3020,27 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]Quest_TF2Yeti"	"Yeti Quest"
 "Quest_TF2Yeti_Desc"	"Recherchez cette créature mythique sur le Mont Rainier."
 "[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"Pizza au menu !"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"Les restes appétissants du repas du kidnappeur.\n\n Débloqué pour avoir joué à Deserving Life."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Marteau de Thor"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Un marteau fait pour un dieu.\n\nDébloqué en jouant à Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Aide"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"Comment prendre des captures d'écran dans SteamVR"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"Pour prendre une capture d'écran en cours de jeu, appuyez simultanément sur le bouton System et la gâchette.\n\\Quand vous aurez quitté le jeu, le gestionnaire des captures d'écran s'affichera et vous pourrez partager publiquement vos captures d'écran."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"Pour prendre une capture d'écran en cours de jeu, appuyez simultanément sur le stick analogique gauche et la gâchette.\n\\Quand vous aurez quitté le jeu, le gestionnaire des captures d'écran s'affichera et vous pourrez partager publiquement vos captures d'écran."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"Pour prendre une capture d'écran en cours de jeu, appuyez simultanément sur le bouton Menu gauche et la gâchette.\n\\Quand vous aurez quitté le jeu, le gestionnaire des captures d'écran s'affichera et vous pourrez partager publiquement vos captures d'écran."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Il semblerait que vous n'ayez pas encore publié de captures d'écran. \n\nPour publier des captures d'écran, prenez en une en jeu, puis utilisez le gestionnaire de captures d'écran pour la publier. Sélectionnez Aide ci-dessus pour savoir comment prendre une capture d'écran en VR. \n\nVous pouvez également sélectionner l'onglet « Prises par la communauté » pour voir et utiliser les captures d'écran populaires de la communauté."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Il semblerait que vous n'ayez pas encore publié d'artworks. \n\nPour importer vos artworks dans SteamVR, vous devrez publier vos artworks depuis le hub de la communauté d'un jeu et les rendre publics.\n\nVous pouvez également sélectionner l'onglet « Créés par la communauté » pour voir et utiliser les artworks populaires de la communauté."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
