--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_greek.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_greek.txt
@@ -3,7 +3,7 @@
 "Language"	"greek"
 "Tokens"
 {
-"VR_Map_Home"	"Σπίτι"
+"VR_Map_Home"	"Radioland"
 "[english]VR_Map_Home"	"Radioland"
 "VR_Map_Home_Desc"	"Ο αρχικός χώρος του σπιτιού."
 "[english]VR_Map_Home_Desc"	"The original Destinations home space."
@@ -371,6 +371,8 @@
 "[english]Mars_ImageGlitches_TurnOff"	"Hide Camera Positions"
 "ItemDetail_LaunchDestination"	"Επιλογή"
 "[english]ItemDetail_LaunchDestination"	"Visit On My Own"
+"ContentBrowser_Tab_Avatars"	"Εικόνες προφίλ"
+"[english]ContentBrowser_Tab_Avatars"	"Avatars"
 "ContentBrowser_Tab_Props"	"Εξαρτήματα"
 "[english]ContentBrowser_Tab_Props"	"Props"
 "ItemDetail_Type_Avatar"	"Εικόνα προφίλ"
@@ -407,6 +409,8 @@
 "[english]IsHomeButtonTitle"	"Current Home"
 "UnsubscribeLabel"	"Κατάργηση συνδρομής"
 "[english]UnsubscribeLabel"	"Unsubscribe"
+"VR_Avatar_BaseAvatar"	"Βασική εικόνα προφίλ"
+"[english]VR_Avatar_BaseAvatar"	"Basic Avatar"
 "ToggleHeadText"	"Κεφάλι"
 "[english]ToggleHeadText"	"Head"
 "ToggleHandsText"	"Χέρια"
@@ -611,6 +615,8 @@
 "[english]BrowsePropsTitle"	"Props"
 "BackButtonText"	"Πίσω"
 "[english]BackButtonText"	"Back"
+"Dashboard_Avatars_1"	"ΠΡΟΣΑΡΜΟΓΗ"
+"[english]Dashboard_Avatars_1"	"CUSTOMIZE"
 "Dashboard_Props_2"	"ΠΡΑΓΜΑΤΑ"
 "[english]Dashboard_Props_2"	"THINGS"
 "Dashboard_Workshop_1"	"ΠΕΡΙΗΓΗΣΗ"
@@ -639,6 +645,14 @@
 "[english]CannonWars_Scoreboard_Desc1"	"Attack!"
 "#CannonWars_Reset_Game"	"ΕΠΑΝΑΦΟΡΑ ΠΑΙΧΝΙΔΙΟΥ"
 "[english]#CannonWars_Reset_Game"	"RESET GAME"
+"JamSession_Guitar_Free"	"ΕΛΕΥΘΕΡΟ ΠΑΙΧΝΙΔΙ"
+"[english]JamSession_Guitar_Free"	"FREE PLAY"
+"JamSession_Guitar_Auto"	"ΑΥΤΟΜΑΤΟ"
+"[english]JamSession_Guitar_Auto"	"AUTOPLAY"
+"JamSession_Drums_Free"	"ΕΛΕΥΘΕΡΟ ΠΑΙΧΝΙΔΙ"
+"[english]JamSession_Drums_Free"	"FREE PLAY"
+"JamSession_Drums_Auto"	"ΑΥΤΟΜΑΤΟ"
+"[english]JamSession_Drums_Auto"	"AUTOPLAY"
 "Avatar_CurrentHead"	"{s:current_avatar_head}"
 "[english]Avatar_CurrentHead"	"{s:current_avatar_head}"
 "Avatar_CurrentHands"	"{s:current_avatar_hands}"
@@ -649,12 +663,18 @@
 "[english]CannonWars_Reset_Game"	"RESET GAME"
 "SortPlayers"	"Παίκτες"
 "[english]SortPlayers"	"Players"
+"SortPlaytime"	"Χρόνος παιχνιδιού"
+"[english]SortPlaytime"	"Playtime"
 "SortType"	"Τύπος"
 "[english]SortType"	"Type"
 "TagTitle"	"Φιλτράρισμα ανά ετικέτα:"
 "[english]TagTitle"	"Filter by Tag:"
 "ToolsTag"	"Εργαλεία"
 "[english]ToolsTag"	"Tools"
+"VR_Avatar_Crab"	"Κεφαλοκάβουρας"
+"[english]VR_Avatar_Crab"	"Headcrab"
+"VR_Avatar_Wearable_ChefHat001"	"Καπέλο σεφ"
+"[english]VR_Avatar_Wearable_ChefHat001"	"Chef Hat"
 "Quest_Headcrab_Desc"	"Ξεκλειδώστε αυτή την εικόνα αλληλεπιδρώντας με κάποιον στο λόμπι Valve."
 "[english]Quest_Headcrab_Desc"	"Unlock this avatar by interacting with something in the Valve Lobby."
 "Quest_Jackolantern_Desc"	"Επισκεφθείτε αυτές τις τρεις τοποθεσίες για να ξεκλειδώσετε αυτή την εικόνα."
@@ -679,8 +699,12 @@
 "[english]Dashboard_Settings"	"Settings"
 "Dashboard_Whats_New_Title"	"Καλώς ορίσατε στο SteamVR!"
 "[english]Dashboard_Whats_New_Title"	"Welcome to SteamVR!"
+"Dashboard_Destinations_1_Gamepad"	"ΕΞΕΡΕΥΝΗΣΗ"
+"[english]Dashboard_Destinations_1_Gamepad"	"EXPLORE"
 "Dashboard_Destinations_2_Gamepad"	"Περιβάλλοντα"
 "[english]Dashboard_Destinations_2_Gamepad"	"Environments"
+"Dashboard_Avatars_1_Gamepad"	"ΠΡΟΣΑΡΜΟΓΗ"
+"[english]Dashboard_Avatars_1_Gamepad"	"CUSTOMIZE"
 "Player_Number"	"{d:num_players}"
 "[english]Player_Number"	"{d:num_players}"
 "QuestDashboardTitle"	"Αποστολές"
@@ -725,6 +749,8 @@
 "[english]WelcomeTutorialLabel"	"Welcome"
 "PublicTutorialLabel"	"Δημόσια δωμάτια"
 "[english]PublicTutorialLabel"	"Public Rooms"
+"VR_Avatar_Wearable_ParasiteHat001"	"Παράσιτο"
+"[english]VR_Avatar_Wearable_ParasiteHat001"	"Parasite"
 "VR_Avatar_Wearable_StormSpiritHat001"	"Καπέλο Storm Spirit"
 "[english]VR_Avatar_Wearable_StormSpiritHat001"	"Storm Spirit Hat"
 "VR_Avatar_Wearable_UndyingHelmet001"	"Κράνος Undying"
@@ -987,6 +1013,8 @@
 "[english]ItemDetail_SetBackground"	"Set Background"
 "ItemDetail_EquipTool"	"Εξόπλιση"
 "[english]ItemDetail_EquipTool"	"Equip"
+"VR_Furniture_Bench001_Desc"	"Ένας πάγκος."
+"[english]VR_Furniture_Bench001_Desc"	"A bench."
 "PromotedItemTitle"	"Περιβάλλον Vive"
 "[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Επισκεφθείτε το αρχικό περιβάλλον που έχει δημιουργηθεί από την HTC για χρήστες Vive."
@@ -995,21 +1023,65 @@
 "[english]ItemDetail_Size"	"Download Size: 355MB"
 "ItemDetail_HostNewRoom"	"Δημιουργία δωματίου"
 "[english]ItemDetail_HostNewRoom"	"Host a Room"
+"ScreenshotTabText"	"ΦΩΤΟΓΡΑΦΙΕΣ"
+"[english]ScreenshotTabText"	"SCREENSHOTS"
 "HTCPromoTitle"	"ΠΕΡΙΒΑΛΛΟΝ VIVE"
 "[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"DetailsButtonText"	"Λεπτομέρειες"
+"[english]DetailsButtonText"	"Details"
+"NoAppsTitle"	"ΚΑΛΩΣ ΟΡΙΣΑΤΕ!"
+"[english]NoAppsTitle"	"WELCOME!"
+"VRHome_Config_Previous"	"ΠΡΟΗΓΟΥΜΕΝΟ"
+"[english]VRHome_Config_Previous"	"PREVIOUS"
+"VRHome_Config_Default"	"ΠΡΟΕΠΙΛΟΓΗ"
+"[english]VRHome_Config_Default"	"DEFAULT"
+"VRHome_Sky_Default"	"ΠΡΟΕΠΙΛΟΓΗ"
+"[english]VRHome_Sky_Default"	"DEFAULT"
+"VRHome_Patio_Default"	"ΠΡΟΕΠΙΛΟΓΗ"
+"[english]VRHome_Patio_Default"	"DEFAULT"
+"PowerOnText"	"ΕΝΕΡΓΟΠΟΙΗΣΗ"
+"[english]PowerOnText"	"POWER ON"
 "ItemDetail_Ratings"	"Αξιολογήσεις"
 "[english]ItemDetail_Ratings"	"Ratings"
 "ItemDetail_Rating"	"Αξιολόγηση"
 "[english]ItemDetail_Rating"	"Rating"
+"VR_PhysicsProp_ASAmmoBox"	"Κουτί πυρομαχικών"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
 "VR_PhysicsProp_ViveLogoStatue"	"Γλυπτό Vive"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
 "VivePromoTitle"	"Αντικείμενα Vive"
 "[english]VivePromoTitle"	"Vive Items"
 "VR_PhysicsProp_JSCoffeeMug"	"Κούπα «I <3 Job»"
 "[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"ContentBrowser_Things_Furniture"	"Έπιπλα"
+"[english]ContentBrowser_Things_Furniture"	"Furniture"
+"ContentBrowser_Things_Trophies"	"Τρόπαια"
+"[english]ContentBrowser_Things_Trophies"	"Trophies"
+"BrowseFurnitureTitle"	"Έπιπλα"
+"[english]BrowseFurnitureTitle"	"Furniture"
+"BrowseTrophiesTitle"	"Τρόπαια"
+"[english]BrowseTrophiesTitle"	"Trophies"
+"GameTrophy_BadgeName"	"{s:badge_name}"
+"[english]GameTrophy_BadgeName"	"{s:badge_name}"
+"ContentBrowser_Things_Screenshots"	"Φωτογραφίες"
+"[english]ContentBrowser_Things_Screenshots"	"Screenshots"
+"BrowseScreenshotsTitle"	"Φωτογραφίες"
+"[english]BrowseScreenshotsTitle"	"Screenshots"
+"ScreenshotDetailTitle"	"Φωτογραφία"
+"[english]ScreenshotDetailTitle"	"Screenshot"
+"Artwork_CommunityTab_Label"	"Από την Κοινότητα"
+"[english]Artwork_CommunityTab_Label"	"From Community"
+"Screenshots_MyTab_Label"	"Οι φωτογραφίες μου"
+"[english]Screenshots_MyTab_Label"	"My Screenshots"
 "BoxingRing_ScorePlayerWins"	"ΚΕΡΔΙΣΑΤΕ!"
 "[english]BoxingRing_ScorePlayerWins"	"YOU WIN!"
+"VR_Avatar_DuckHuntDogHead"	"Κεφάλι σκύλου"
+"[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
 "VR_PhysicsProp_TF2Yeti"	"Γέτι"
 "[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_WrathOfLokiHammer"	"Σφυρί του Thor"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Ένα σφυρί που ταιριάζει σε έναν θεό.\n\nΞεκλειδώνεται παίζοντας το Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
 }
 }
