--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt
@@ -3024,5 +3024,23 @@
 "[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
 "VR_PhysicsProp_DeservingLifePizza_Desc"	"Ízletes maradék az emberrablótól.\n\nA Deserving Life játszásával oldható fel."
 "[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Thor pörölye"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Egy istenhez illő pöröly.\n\nA Wrath of Loki VR Adventure játszásával oldható fel."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Súgó"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"Hogyan készíts képernyőmentéseket SteamVR-ben"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"Képernyőmentés készítéséhez játék közben nyomd meg egyszerre a Rendszer gombot és a Ravaszt.\n\nMiután kiléptél a játékból, meg fog jelenni a Steam Képernyőmentés-kezelő, amellyel nyilvánosan megoszthatod a képernyőmentéseket."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"Képernyőmentés készítéséhez játék közben nyomd meg egyszerre a Bal Irányítókart és a Ravaszt.\n\nMiután kiléptél a játékból, meg fog jelenni a Steam Képernyőmentés-kezelő, amellyel nyilvánosan megoszthatod a képernyőmentéseket."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"Képernyőmentés készítéséhez játék közben nyomd meg egyszerre a Bal Menü gombot és a Ravaszt.\n\nMiután kiléptél a játékból, meg fog jelenni a Steam Képernyőmentés-kezelő, amellyel nyilvánosan megoszthatod a képernyőmentéseket."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Úgy tűnik, még egyetlen képernyőmentést sem osztottál meg nyilvánosan.\n\nKépernyőmentések megosztásához készíts képernyőmentést játékon belül, majd használd a képernyőmentés-kezelőt a Steamen való nyilvános megosztáshoz. A fenti \"Súgó\" segítségével megtudhatod, hogyan készíts VR képernyőmentéseket.\n\nA fenti „A Közösségtől” fület kiválasztva pedig a közösség készítette népszerű nyilvános képernyőmentéseket nézhetsz meg és használhatsz."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Úgy tűnik, még egyetlen alkotást sem osztottál meg nyilvánosan.\n\nAlkotásod SteamVR kezdőteredbe hozásához fel kell töltened azt a Steamre a játék Közösségközpontjából és nyilvánosan megtekinthetővé kell tenned.\n\nA fenti „A Közösségtől” fület kiválasztva pedig a közösség készítette népszerű nyilvános alkotásokat nézhetsz meg és használhatsz."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
