--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_italian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_italian.txt
@@ -3001,5 +3001,23 @@
 "[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
 "VR_PhysicsProp_DeservingLifePizza_Desc"	"Un delizioso avanzo del rapitore.\n\nSbloccato per aver giocato a Deserving Life."
 "[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Martello di Thor"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Un martello degno di un dio.\n\nSbloccato per aver giocato a Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Aiuto"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"Come fare degli screenshot su SteamVR"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"Per fare uno screenshot mentre sei in gioco, premi contemporaneamente il grilletto e il pulsante System.\n\nDopo essere uscito dal gioco, Steam aprirà automaticamente il pannello di gestione degli screenshot, da cui potrai condividerli pubblicamente."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"Per fare uno screenshot mentre sei in gioco, premi contemporaneamente il grilletto e la levetta sinistra.\n\nDopo essere uscito dal gioco, Steam aprirà automaticamente il pannello di gestione degli screenshot, da cui potrai condividerli pubblicamente."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"Per fare uno screenshot mentre sei in gioco, premi contemporaneamente il grilletto e il pulsante Menu sinistro.\n\nDopo essere uscito dal gioco, Steam aprirà automaticamente il pannello di gestione degli screenshot, da cui potrai condividerli pubblicamente."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Sembra che tu non abbia ancora condiviso degli screenshot. \n\nDopo aver fatto uno screenshot mentre sei in gioco, usa il pannello di gestione degli screenshot per condividerlo pubblicamente su Steam. Seleziona \"Aiuto\" qui sopra per ulteriori informazioni sugli screenshot in realtà virtuale. \n\nPuoi anche selezionare la voce \"Dalla Comunità\" per visualizzare e usare gli screenshot popolari realizzati dalla Comunità."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Sembra che tu non abbia ancora condiviso delle immagini. \n\nPer portare le tue immagini su SteamVR Home, prima dovrai caricarle su Steam tramite l'hub della Comunità di un gioco, dopodiché dovrai renderle pubbliche.\n\nPuoi anche selezionare la voce \"Dalla Comunità\" qui sopra per visualizzare e usare le immagini popolari realizzate dalla Comunità."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
