--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_portuguese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_portuguese.txt
@@ -653,7 +653,7 @@
 "[english]Notification_NoDestinationForcedHome"	"The host is moving this group to the {s:destination_title} environment, which you are not subscribed to. You will be returned home in {d:countdown_seconds} seconds."
 "TutorialWelcome_Title"	"Bem-vindo(a)!"
 "[english]TutorialWelcome_Title"	"Welcome!"
-"TutorialWelcome_Tile1_Desc"	"Bem-vindo(a) ao SteamVR Home! Este é o teu espaço inicial."
+"TutorialWelcome_Tile1_Desc"	"Bem-vindo(a) ao SteamVR! Este é o teu espaço inicial."
 "[english]TutorialWelcome_Tile1_Desc"	"Welcome to SteamVR Home! This is your home space."
 "TutorialWelcome_Tile2_Desc"	"O teu espaço inicial é interativo, personalizável e social."
 "[english]TutorialWelcome_Tile2_Desc"	"Your home space is interactive, customizable, and social."
@@ -2306,7 +2306,7 @@
 "[english]GameUI_Disconnect_ServerShutdown"	"The host has closed the room"
 "GameUI_Disconnect_ConnectionTimedout"	"Tentativa de entrar na sala expirou"
 "[english]GameUI_Disconnect_ConnectionTimedout"	"Timed out trying to join room"
-"GameUI_Disconnect_ServerIncompatible"	"O anfitrião está a usar uma versão diferente do SteamVR Home"
+"GameUI_Disconnect_ServerIncompatible"	"O anfitrião está a usar uma versão diferente do SteamVR"
 "[english]GameUI_Disconnect_ServerIncompatible"	"The host is running a different version of SteamVR Home"
 "SteamDisclaimer"	"O conteúdo da Comunidade Steam pode não ser apropriado para todas as idades."
 "[english]SteamDisclaimer"	"Content from the Steam Community may not be appropriate for all ages."
@@ -3016,5 +3016,27 @@
 "[english]Quest_TF2Yeti"	"Yeti Quest"
 "Quest_TF2Yeti_Desc"	"Encontra este monstro mítico a passear pelo Monte Rainier."
 "[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"Restos deliciosos deixados pelo raptor.\n\nItem desbloqueado ao jogar o jogo Deserving Life."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Martelo de Thor"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Um martelo digno de um deus.\n\nItem desbloqueado ao jogar o jogo Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Ajuda"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"Como tirar capturas de ecrã no SteamVR"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"Para capturares o ecrã enquanto jogas, pressiona o botão System e o gatilho ao mesmo tempo.\n\nQuando saíres do jogo, será apresentada a interface do Gestor de Capturas de Ecrã do Steam, onde poderás partilhar as capturas de ecrã publicamente."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"Para capturares o ecrã enquanto jogas, pressiona o manípulo esquerdo e o gatilho ao mesmo tempo.\n\nQuando saíres do jogo, será apresentada a interface do Gestor de Capturas de Ecrã do Steam, onde poderás partilhar as capturas de ecrã publicamente."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"Para capturares o ecrã enquanto jogas, pressiona o botão Menu esquerdo e o gatilho ao mesmo tempo.\n\nQuando saíres do jogo, será apresentada a interface do Gestor de Capturas de Ecrã do Steam, onde poderás partilhar as capturas de ecrã publicamente."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Parece que ainda não partilhaste capturas de ecrã publicamente.\n\nPara partilhares capturas de ecrã, tira uma enquanto jogas, e usa o Gestor de Capturas de Ecrã para partilhá-la no Steam publicamente. Seleciona \"Ajuda\" acima para mais detalhes.\n\nTambém podes selecionar o separador \"Da Comunidade\" acima para veres e usares capturas de ecrã populares."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Parece que ainda não partilhaste arte publicamente.\n\nPara trazeres a tua arte para o espaço inicial do SteamVR, terás de enviar a tua arte para o Steam a partir da Central Comunitária de um jogo e torná-la visível publicamente.\n\nTambém podes selecionar o separador \"Da Comunidade\" acima para veres e usares arte popular."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
