--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_romanian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_romanian.txt
@@ -585,7 +585,7 @@
 "[english]SortType"	"Type"
 "TagTitle"	"Filtrează după etichetă:"
 "[english]TagTitle"	"Filter by Tag:"
-"ToolsTag"	"Utilitare"
+"ToolsTag"	"Instrumente"
 "[english]ToolsTag"	"Tools"
 "VR_PhysicsProp_Balloonicorn"	"Balloonicorn"
 "[english]VR_PhysicsProp_Balloonicorn"	"Balloonicorn"
@@ -699,6 +699,8 @@
 "[english]Quest_Medkit_Desc"	"Unlock this prop by interacting with something in the Valve Lobby."
 "Quest_TechiesBarrel_Desc"	"Deblochează această recuzită interacționând cu ceva din lobby-ul Valve."
 "[english]Quest_TechiesBarrel_Desc"	"Unlock this prop by interacting with something in the Valve Lobby."
+"Quest_ToyGun_Desc"	"{d:num_visited}/10 vizitate\nVizitează 10 medii descărcate din atelier pentru a debloca acest instrument."
+"[english]Quest_ToyGun_Desc"	"{d:num_visited}/10 Visited\nVisit 10 environments downloaded from the Workshop to unlock this tool."
 "Quest_Detector"	"Misiunea săptămânală cu comori ascunse"
 "[english]Quest_Detector"	"Weekly Geocaching Quest"
 "QuestType_Detector"	"{d:quest_quantity} comori rămase"
@@ -839,6 +841,8 @@
 "[english]PublicTutorialLabel"	"Public Rooms"
 "PropsTutorialLabel"	"Utilizarea recuzitelor"
 "[english]PropsTutorialLabel"	"Using Props"
+"ToolsTutorialLabel"	"Utilizarea instrumentelor"
+"[english]ToolsTutorialLabel"	"Using Tools"
 "AvatarTutorialLabel"	"Avatarul tău"
 "[english]AvatarTutorialLabel"	"Your Avatar"
 "VR_Avatar_Wearable_ParasiteHat001"	"Parazit"
@@ -1112,6 +1116,8 @@
 "[english]Friends_InGame_VR"	"In Game - VR"
 "Friends_App_Title"	"{s:in_app_name}"
 "[english]Friends_App_Title"	"{s:in_app_name}"
+"GameUI_Disconnect_ConnectionTimedout"	"Alăturarea la cameră a expirat"
+"[english]GameUI_Disconnect_ConnectionTimedout"	"Timed out trying to join room"
 "UGCTitle"	"COMUNITATEA STEAM"
 "[english]UGCTitle"	"STEAM COMMUNITY"
 "ScreenshotTabText"	"CAPTURI DE ECRAN"
@@ -1212,7 +1218,7 @@
 "[english]VR_GameTrophy_NoAchievements"	"A Steam Trophy"
 "VR_GameTrophy_NoAchievements_Desc"	"Un trofeu Steam pentru {s:app_name}."
 "[english]VR_GameTrophy_NoAchievements_Desc"	"A Steam Trophy for {s:app_name}."
-"ContentBrowser_Things_Tools"	"Utilitare"
+"ContentBrowser_Things_Tools"	"Instrumente"
 "[english]ContentBrowser_Things_Tools"	"Tools"
 "ContentBrowser_Things_Wearables"	"Accesorii de purtat"
 "[english]ContentBrowser_Things_Wearables"	"Wearables"
@@ -1222,7 +1228,7 @@
 "[english]ContentBrowser_Things_Trophies"	"Trophies"
 "BrowseThingsTitle"	"Obiecte"
 "[english]BrowseThingsTitle"	"Things"
-"BrowseToolsTitle"	"Utilitare"
+"BrowseToolsTitle"	"Instrumente"
 "[english]BrowseToolsTitle"	"Tools"
 "BrowseWearablesTitle"	"Accesorii de purtat"
 "[english]BrowseWearablesTitle"	"Wearables"
@@ -1338,6 +1344,8 @@
 "[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
 "TutorialWelcome_Tile3_WinMR_Desc"	"Pentru a deschide și a închide acest meniu, utilizează butonul de meniu de pe controllerul tău."
 "[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
+"TutorialTeleport_Tile1_WinMR_Desc"	"Pentru a te teleporta, apasă înainte pe joystick."
+"[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
 "TutorialTeleport_Tile2_WinMR_Desc"	"Vei vedea un arc care se sfârșește cu un cerc verde pe sol."
 "[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
 "TutorialTeleport_Tile3_WinMR_Desc"	"Dă drumul la joystick pentru a te teleporta la cercul verde."
@@ -1346,5 +1354,7 @@
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
 "VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
 "[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"ScreenshotTutorialButton"	"Ajutor"
+"[english]ScreenshotTutorialButton"	"Help"
 }
 }
