--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_russian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_russian.txt
@@ -691,7 +691,7 @@
 "[english]TutorialTeleport_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
 "TutorialWelcome_Tile1_Controller_Desc"	"Добро пожаловать!"
 "[english]TutorialWelcome_Tile1_Controller_Desc"	"Welcome!"
-"TutorialWelcome_Tile2_Controller_Desc"	"В SteamVR вы можете вместе с друзьями посещать реальные и выдуманные места."
+"TutorialWelcome_Tile2_Controller_Desc"	"В SteamVR вы можете посещать реальные и виртуальные миры вместе со своими друзьями."
 "[english]TutorialWelcome_Tile2_Controller_Desc"	"In SteamVR you can visit real and imaginary places with friends."
 "TutorialWelcome_Tile3_Controller_Desc"	"Нажмите кнопку Y на контроллере, чтобы открыть или закрыть это меню."
 "[english]TutorialWelcome_Tile3_Controller_Desc"	"To open and close this menu, use the Y button on your controller."
@@ -889,7 +889,7 @@
 "[english]ConfirmationTitle"	"Are you sure?"
 "ConfirmationButtonOKText"	"Закрыть комнату"
 "[english]ConfirmationButtonOKText"	"Close Room"
-"ConfirmationButtonCancelText"	"Отменить"
+"ConfirmationButtonCancelText"	"Отмена"
 "[english]ConfirmationButtonCancelText"	"Cancel"
 "Friends_IsHost"	"Хозяин"
 "[english]Friends_IsHost"	"Room Host"
@@ -1651,7 +1651,7 @@
 "[english]TutorialQuest_Bottom_Desc"	"Go to 'Quests' from the Dashboard to see a list of available quests."
 "TutorialWelcome_Tile1_Touch_Desc"	"Добро пожаловать в SteamVR!"
 "[english]TutorialWelcome_Tile1_Touch_Desc"	"Welcome to SteamVR!"
-"TutorialWelcome_Tile2_Touch_Desc"	"В SteamVR вы можете вместе с друзьями посещать реальные и выдуманные места."
+"TutorialWelcome_Tile2_Touch_Desc"	"В SteamVR вы можете посещать реальные и виртуальные миры вместе со своими друзьями."
 "[english]TutorialWelcome_Tile2_Touch_Desc"	"In SteamVR you can visit real and imaginary places with friends."
 "TutorialWelcome_Tile3_Touch_Desc"	"Чтобы открыть или закрыть это меню, нажмите на контроллере кнопку B (или Y)."
 "[english]TutorialWelcome_Tile3_Touch_Desc"	"To open and close this menu, use the B (or Y) button on your controller."
@@ -2264,7 +2264,7 @@
 "[english]LaunchFriendsRoomText"	"Host a Friends Only Room"
 "LaunchPublicRoomText"	"Создать открытую комнату"
 "[english]LaunchPublicRoomText"	"Host a Public Room"
-"CancelHostText"	"Отменить"
+"CancelHostText"	"Отмена"
 "[english]CancelHostText"	"Cancel"
 "VisitMessageTitle"	"Какую версию?"
 "[english]VisitMessageTitle"	"Which version?"
@@ -2342,9 +2342,9 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ПРЕДМЕТЫ VIVE"
+"HTCPromoTitle"	"ИГРОВОЙ МИР VIVE"
 "[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Если вы являетесь обладателем Vive, не забудьте испробовать аватар и объект Vive."
+"HTCPromoDesc"	"Исследуйте Дрифтвуд — игровой мир, созданный Vive Creative Labs."
 "[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"ИГРОВЫЕ МИРЫ VALVE"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2986,6 +2986,8 @@
 "[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
 "TutorialWelcome_Tile2_WinMR_Desc"	"В SteamVR вы можете посещать реальные и виртуальные миры вместе со своими друзьями."
 "[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
+"TutorialWelcome_Tile3_WinMR_Desc"	"Чтобы открыть или закрыть это меню, нажмите на контроллере кнопку меню."
+"[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
 "TutorialTeleport_Tile1_WinMR_Desc"	"Чтобы телепортироваться, нажмите вперёд на джойстике."
 "[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
 "TutorialTeleport_Tile2_WinMR_Desc"	"Вы увидите дугу с зелёным кружком вокруг одного из её концов."
@@ -2994,5 +2996,37 @@
 "[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
 "TutorialTeleport_WinMR_Bottom_Desc"	"Телепортационная дуга станет красной, если в данную точку невозможно телепортироваться."
 "[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"Фигурка Magi"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Фигурка загадочной девочки MAGI из OVERTURN в полный рост.\n\nВыдаётся за игру в OVERTURN."
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"Груша Poppy"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Огрушительно.\n\nВыдаётся за игру в Smashbox Arena."
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"Tilt-завр"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Ваш дружелюбный сосед: динозавр-3D-художник.\n\nВыдаётся за игру в Tilt Brush."
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"Гора Рейнир"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"Высочайшая горная вершина штата Вашингтон (США)."
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"Йети"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"Согласно священным тибетским преданиям, благородный Йети живёт в гималайских вершинах. Согласно Team Fortress 2, представителей его вида можно встретить в Пламенных джунглях. Так что же этот бедолага забыл на вашингтонской горе?"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"Задание «Йети»"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"Разыщите мифическое существо, скрывающееся на горе Рейнир."
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"Пицца — источник жизни!"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"Лакомый кусок, не съеденный похитителем.\n\nВыдаётся за игру в Deserving Life."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Молот Тора"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Молот, достойный бога.\n\nВыдаётся за игру в Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
 }
 }
