--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_schinese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_schinese.txt
@@ -1501,7 +1501,7 @@
 "[english]QuestType_Detector"	"{d:quest_quantity} Caches Left"
 "Quest_Detector_Complete"	"已找到所有宝藏"
 "[english]Quest_Detector_Complete"	"All Caches Found"
-"Quest_Detector_Desc"	"使用（在“物品”中找到的）“寻宝者”工具在以下环境中找到一个宝藏："
+"Quest_Detector_Desc"	"使用（在“物品”中找到的）“寻宝高手”工具在以下环境中找到一个宝藏："
 "[english]Quest_Detector_Desc"	"Use the Cache Finder Tool (found in 'Things') to locate a cache in one of the following environments:"
 "Quest_Detector_Desc_Complete"	"您已完成所有本周地理寻宝任务。任务将于格林威治标准时间每周三午夜变更。"
 "[english]Quest_Detector_Desc_Complete"	"You have completed all Geocaching Quests for the week. This quest resets every Wednesday night at midnight GMT."
@@ -2235,9 +2235,9 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"当前家"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"HTC Vive 环境"
+"PromotedItemTitle"	"Vive 环境"
 "[english]PromotedItemTitle"	"Vive Environment"
-"PromotedItemDescription"	"访问由 HTC 为 Vive 用户创建的家居环境。 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"PromotedItemDescription"	"访问由 HTC 为 Vive 用户创建的家居环境。"
 "[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"以后再说"
 "[english]DismissLabel"	"Not Now"
@@ -2339,11 +2339,11 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE 物品"
+"HTCPromoTitle"	"VIVE 环境"
 "[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"HTC 为 Vive 使用者特制。"
+"HTCPromoDesc"	"探索 Vive Creative Labs 特别打造的漂流木环境。"
 "[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
-"ValvePromoTitle"	"VALVE 环境合集"
+"ValvePromoTitle"	"VALVE 环境"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"点击此处查看 Valve 艺术家为 SteamVR 创作的环境。"
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
@@ -2527,7 +2527,7 @@
 "[english]EmptyBackgroundItem_Desc"	"Use the original skybox from the map."
 "ResetAnchorButtonText"	"重置位置"
 "[english]ResetAnchorButtonText"	"Reset Position"
-"ResetAnchorDesc"	"这会重置环境，以与定位区域对齐。"
+"ResetAnchorDesc"	"这会重置环境，以与定位区域对齐。有助于定制您的家，使之与现实空间相匹配。"
 "[english]ResetAnchorDesc"	"This resets your environment to line up with your tracked area. Useful for customizing your Home to match your real world space."
 "VR_Avatar_Wearable_MopedHelmet001"	"轻便摩托车头盔"
 "[english]VR_Avatar_Wearable_MopedHelmet001"	"Moped Helmet"
@@ -2963,7 +2963,7 @@
 "[english]VR_PhysicsProp_RacketNxFigurine_Desc"	"A miniature figurine of the Racket: Nx's Alien Robot Lizard with Sound Activated Brain (TM).\n\n*Sound Activated Brain not included.\n\nUnlocked by playing Racket: Nx."
 "VR_Avatar_DuckHuntDogHead"	"狗头"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
-"VR_Avatar_DuckHuntDogHead_Desc"	"吉祥物 —《Duck Season》狗的头。非常适合派对，掩饰您的真面目吓唬好友。\n\n通过游玩《Duck Hunt》解锁。"
+"VR_Avatar_DuckHuntDogHead_Desc"	"吉祥物 —《Duck Season》狗的头。非常适合派对，掩饰您的真面目吓唬好友。\n\n通过游玩《Duck Season》解锁。"
 "[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"《Rez Infinite》化身"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
@@ -2971,9 +2971,59 @@
 "[english]VR_PhysicsProp_RezHeroFigurine_Desc"	"The player avatar for the legendary action-shooter.\n\nUnlocked by playing Rez Infinite."
 "UGCHiddenLabel"	"用户生成的内容已被隐藏。您可以在设置中对其进行改变。"
 "[english]UGCHiddenLabel"	"User generated content is hidden. You can change this in Settings."
+"VR_Avatar_Wearable_GornWingedHelmet"	"翼盔"
+"[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
+"VR_Avatar_Wearable_GornWingedHelmet_Desc"	"从“将军”本人的脑袋上扯下的翼盔。通过气味判断，从未被洗过。自豪地从一名优胜的 GORN 角斗士处借得。\n\n通过游玩《GORN》解锁。"
+"[english]VR_Avatar_Wearable_GornWingedHelmet_Desc"	"The Winged Helmet, torn from the head of 'The General' himself. Judging by smell, never been washed. Proudly on loan from a victorious GORN gladiator.\n\nUnlocked by playing GORN."
 "VR_Avatar_WindowsMR_Controllers"	"Windows MR 控制器"
 "[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
+"VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR 控制器"
+"[english]VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR controllers"
 "TutorialWelcome_Tile1_WinMR_Desc"	"欢迎进入 SteamVR！"
 "[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
+"TutorialWelcome_Tile2_WinMR_Desc"	"在 SteamVR 中，您可以与好友一起访问真实的与虚构的场所。"
+"[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
+"TutorialWelcome_Tile3_WinMR_Desc"	"请使用控制器上的菜单按钮来开启与关闭此菜单。"
+"[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
+"TutorialTeleport_Tile1_WinMR_Desc"	"向前推摇杆以进行传送。"
+"[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
+"TutorialTeleport_Tile2_WinMR_Desc"	"您将会看到一道弧线，弧线终点的地面上有一个绿色的圆圈。"
+"[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
+"TutorialTeleport_Tile3_WinMR_Desc"	"放开摇杆以传送至绿色圆圈。"
+"[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
+"TutorialTeleport_WinMR_Bottom_Desc"	"所选传送位置无效时，传送标示将呈红色。"
+"[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"魅姬塑像"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"OVERTURN（毁灭） 中的神秘女孩“魅姬”的全身塑像。\n\n通过游玩 OVERTURN（毁灭）解锁。"
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"梨子“波比”"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"梨子头饰。\n\n通过游玩《Smashbox Arena》解锁。"
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"你画我猜"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"你的好邻居，3D 绘制的恐龙。\n\n通过游玩《Tilt Brush》解锁。"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"雷尼尔山"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"美国华盛顿州最高的山"
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"雪人"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"在神圣的西藏民间传说中，高贵的雪人栖息于尼泊尔的喜马拉雅地区。而在《军团要塞 2》中，你将会发现他们居然出没于丛林炼狱之中。这些流离失所的异乡人究竟在华盛顿州干嘛？"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"雪人任务"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"寻找这只潜伏在雷尼尔山的神兽吧。"
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"披萨就是生活！"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"绑匪吃剩的美味披萨。\n\n通过游玩《Deserving Life》解锁。"
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"雷神之锤"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"一款适合天神的锤子。\n\n通过游玩《洛基的愤怒》解锁。"
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
 }
 }
