--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_tchinese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_tchinese.txt
@@ -2346,7 +2346,7 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE 物品"
+"HTCPromoTitle"	"VIVE 場景"
 "[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
 "ValvePromoTitle"	"VALVE 場景"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2560,14 +2560,28 @@
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
 "VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
 "[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"為預防音樂轟炸而裝備。\n\n遊玩《Audioshield》而解鎖。"
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by playing Audioshield."
 "VR_PhysicsProp_NekoPlushie_Desc"	"喵喵喵。\n\n遊玩《Fantastic Contraption》而解鎖。"
 "[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by playing Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy_Desc"	"我的天啊，哎，那機器設計了我們兩個！至少我們還有這隻看起來很酷炫、來自外太空的手當作紀念品！\n\n遊玩《The Gallery - Call of the Starseed》而解鎖。"
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by playing The Gallery - Call of the Starseed."
 "VR_PhysicsProp_ASAmmoBox"	"彈藥箱"
 "[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
 "VR_PhysicsProp_ASAmmoBox_Desc"	"彈藥箱，耶！寶貝！多美好、多棒的彈藥啊！ \n\n遊玩《Arizona Sunshine》而解鎖。"
 "[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by playing Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"第二代突擊系 AirMech。此縮小模型為贈送給大量下單的政府機關的禮物。\n\n遊玩《AirMech Command》而解鎖。"
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by playing AirMech Command."
+"VR_PhysicsProp_HJGuntherToy_Desc"	"為了擴大自己的餐廳事業，Gunther 現踏入了銷售的世界。今天就把專屬於您的 Gunther 模型帶回家。\n\n遊玩《Hover Junkers》而解鎖。"
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by playing Hover Junkers."
 "VR_Avatar_SpacePirateHelmet"	"太空海盜頭盔"
 "[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"充滿了能增強視覺、聽覺，以及讓您能放慢時間的神經刺激物質，本頭盔絕對是所有頂尖太空海盜的首選，就算是培訓中的也不例外。\n\n遊玩《Space Pirate Trainer》而解鎖。"
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by playing Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas_Desc"	"當這台光圈科技實驗中心出品的精密機器人終於從遭 GLaDOS 的帶賽實驗對象嘗試修理的屈辱中解脫時，卻落入成為書桌裝飾品的屈辱。\n\n遊玩《The Lab》而解鎖。"
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball_Desc"	"嗨！我是 MEESEEKS 先生！快看我！\n\n遊玩《Rick and Morty: Virtual Rickality》而解鎖。"
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by playing Rick and Morty: Virtual Rickality"
 "VR_PhysicsProp_ViveLogoStatue"	"Vive 雕塑"
 "[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
 "VR_Avatar_ViveHeadset"	"HTC Vive 頭戴顯示器"
@@ -2586,22 +2600,44 @@
 "[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
 "VR_PhysicsProp_CosmicTripFriendbot"	"同伴機械人"
 "[english]VR_PhysicsProp_CosmicTripFriendbot"	"Friend Bot"
+"VR_PhysicsProp_CosmicTripFriendbot_Desc"	"朋友機器人，所有人的好夥伴。新鮮又獨特。\n\n遊玩《Cosmic Trip》而解鎖。"
+"[english]VR_PhysicsProp_CosmicTripFriendbot_Desc"	"Friend bot, friend of everyone. Fresh and funky.\n\nUnlocked by playing Cosmic Trip."
+"VR_PhysicsProp_AnylandRing_Desc"	"在 Anyland 中，您可使用基本的形狀創造一切，就像 Anyland Ring 上面的一樣！\n\n遊玩《Anyland》而解鎖。"
+"[english]VR_PhysicsProp_AnylandRing_Desc"	"In Anyland you can create everything with basic shapes, as those on the Anyland Ring!\n\nUnlocked by playing Anyland."
+"VR_PhysicsProp_RecRoomBucket_Desc"	"請勿將此物移出娛樂中心。如有拾獲，請立即歸還！\n\n遊玩《Rec Room》而解鎖。"
+"[english]VR_PhysicsProp_RecRoomBucket_Desc"	"Please do not remove this bucket from the Rec Center. If found, please return promptly!\n\nUnlocked by playing Rec Room."
 "VR_PhysicsProp_QuivrQuiverWithArrows"	"祖傳箭袋"
 "[english]VR_PhysicsProp_QuivrQuiverWithArrows"	"Ancestral Quiver"
+"VR_PhysicsProp_QuivrQuiverWithArrows_Desc"	"此箭袋和袋中之箭自一個古代遺跡出土，在早已為人遺忘的生物骨頭化石圍繞之下，發出陣陣能量。\n\n遊玩《QuiVr》而解鎖。"
+"[english]VR_PhysicsProp_QuivrQuiverWithArrows_Desc"	"Found in an ancient ruin, surrounded by the fossilized bones of long-forgotten creatures, this quiver and its arrows still pulse with energy.\n\nUnlocked by playing QuiVr."
+"VR_PhysicsProp_RomExtractionFigurine_Desc"	"敵人具高度智能，請謹慎前進。以上為 ROM CORP 為您帶來的訊息。\n\n遊玩《ROM: Extraction》而解鎖。"
+"[english]VR_PhysicsProp_RomExtractionFigurine_Desc"	"The enemy is highly intelligent. Please proceed with caution. This message brought to you by ROM CORP.\n\nUnlocked by playing ROM: Extraction."
 "VR_PhysicsProp_SuperhotVRFigurine"	"《SUPERHOT》敵人塑像"
 "[english]VR_PhysicsProp_SuperhotVRFigurine"	"SUPERHOT Enemy Figurine"
+"VR_PhysicsProp_SuperhotVRFigurine_Desc"	"紅色的水晶塑像，看似有些憤怒，您一動還可能跟著動。\n\n「肉身用畢即棄，心智即為軟體」\n\n遊玩《Superhot VR》而解鎖。"
+"[english]VR_PhysicsProp_SuperhotVRFigurine_Desc"	"Red crystal figure. Seems angry. Might move if you move.\n\nBODIES ARE DISPOSABLE MIND IS SOFTWARE\n\nUnlocked by playing Superhot VR."
 "VR_PhysicsProp_FAGeeBeeTrophy"	"Gee Bee 飛機"
 "[english]VR_PhysicsProp_FAGeeBeeTrophy"	"Gee Bee Airplane"
 "VR_PhysicsProp_FAGeeBeeTrophy_Desc"	"世界上最快最危險的飛機。\n\n遊玩《Final Approach》而解鎖。"
 "[english]VR_PhysicsProp_FAGeeBeeTrophy_Desc"	"The fastest and most dangerous airplane in the world.\n\nUnlocked by playing Final Approach."
 "VR_PhysicsProp_Island359TRexFigurine"	"暴龍"
 "[english]VR_PhysicsProp_Island359TRexFigurine"	"T-Rex"
+"VR_PhysicsProp_Island359TRexFigurine_Desc"	"Island 359 上最大最恐怖的恐龍！\n\n遊玩《Island 359》而解鎖。"
+"[english]VR_PhysicsProp_Island359TRexFigurine_Desc"	"The biggest and most fearsome dinosaur in Island 359!\n\nUnlocked by playing Island 359."
+"VR_Avatar_RawDataSaijaHead_Desc"	"身為靈力忍術的大師，Saija 能夠使彈道偏離、將敵人投入空中，並以她致命的利刃將敵人撕成碎片。\n\n遊玩《Raw Data》而解鎖。"
+"[english]VR_Avatar_RawDataSaijaHead_Desc"	"As a master of telekinetic Ninjutsu, Saija can deflect bullets, catapult foes into the sky, and rip enemies to pieces with her lethal blades.\n\nUnlocked by playing Raw Data."
+"VR_Avatar_Wearable_ToTheTopKitsuneMask_Desc"	"從一台高空飛行的超級機器人上掉下來的狐狸面具。\n\n遊玩《TO THE TOP》而解鎖。"
+"[english]VR_Avatar_Wearable_ToTheTopKitsuneMask_Desc"	"A Kitsune mask that fell off of a high flying Super Bot.\n\nUnlocked by playing TO THE TOP."
 "ItemDetail_Type_Collectible"	"SteamVR 收藏品"
 "[english]ItemDetail_Type_Collectible"	"SteamVR Collectible"
 "VR_PhysicsProp_PierheadToyBear"	"獅熊"
 "[english]VR_PhysicsProp_PierheadToyBear"	"Tiger Bear"
+"VR_PhysicsProp_PierheadToyBear_Desc"	"從夾娃娃機抓來的柔軟玩具。\n\n遊玩《Pierhead Arcade》而解鎖。"
+"[english]VR_PhysicsProp_PierheadToyBear_Desc"	"A soft toy from a claw machine.\n\nUnlocked by playing Pierhead Arcade."
 "VR_PhysicsProp_BattlezoneToyTank"	"中型坦克"
 "[english]VR_PhysicsProp_BattlezoneToyTank"	"Medium Tank"
+"VR_PhysicsProp_BattlezoneToyTank_Desc"	"它不大，但很危險。\n\n遊玩《Battlezone》而解鎖。"
+"[english]VR_PhysicsProp_BattlezoneToyTank_Desc"	"It's not big, but it is dangerous.\n\nUnlocked by playing Battlezone."
 "GameTrophy_AppName"	"{s:app_name}"
 "[english]GameTrophy_AppName"	"{s:app_name}"
 "GameTrophy_OwnerName"	"{s:owner_name}"
@@ -2670,6 +2706,8 @@
 "[english]ContentBrowser_Things_SpawnablePanels"	"Panels"
 "BrowseSpawnablePanelsTitle"	"面板"
 "[english]BrowseSpawnablePanelsTitle"	"Panels"
+"VR_PhysicsProp_LocodojoSensei_Desc"	"Grand Sensei 是 Loco Dojo 的典禮專家。\n\n遊玩《Loco Dojo》而解鎖。"
+"[english]VR_PhysicsProp_LocodojoSensei_Desc"	"The Grand Sensei is Loco Dojo's master of ceremonies.\n\nUnlocked by playing Loco Dojo."
 "ScreenshotTitle_Landing"	"依應用程式排序螢幕擷圖"
 "[english]ScreenshotTitle_Landing"	"Screenshots by App"
 "VR_Furniture_TrophyShelves"	"Steam 獎盃櫃 - 大"
@@ -2768,9 +2806,33 @@
 "[english]VR_Avatar_Wearable_HalloweenBagMask014"	"Bag Mask - Creepy Grin"
 "VR_Avatar_Wearable_HalloweenBagMask014_Desc"	"簡單便宜的萬聖節裝扮。"
 "[english]VR_Avatar_Wearable_HalloweenBagMask014_Desc"	"A simple cheap option for a Halloween costume."
+"VR_PhysicsProp_GoogleEarthGlobe_Desc"	"一手掌握世界。\n\n遊玩《Google Earth VR》而解鎖。"
+"[english]VR_PhysicsProp_GoogleEarthGlobe_Desc"	"The world is in your hands.\n\nUnlocked by playing Google Earth VR."
+"VR_PhysicsProp_KatanaX_Desc"	"這把刀從未傷害過任何蔬果。安全起見，請勿將其從牆上取下。\n\n遊玩《Katana X》而解鎖。"
+"[english]VR_PhysicsProp_KatanaX_Desc"	"No vegetables were ever hurt with this tool. For safety reasons leave it hanging on the wall.\n\nUnlocked by playing Katana X."
 "VR_Avatar_DuckHuntDogHead"	"狗頭"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
+"VR_PhysicsProp_RezHeroFigurine_Desc"	"傳奇動作射擊遊戲中的玩家化身。\n\n遊玩《Rez Infinite》而解鎖。"
+"[english]VR_PhysicsProp_RezHeroFigurine_Desc"	"The player avatar for the legendary action-shooter.\n\nUnlocked by playing Rez Infinite."
+"VR_Avatar_WindowsMR_Controllers"	"Windows MR 控制器"
+"[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
+"VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR 控制器"
+"[english]VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR controllers"
 "TutorialWelcome_Tile1_WinMR_Desc"	"歡迎來到 SteamVR！"
 "[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
+"TutorialWelcome_Tile2_WinMR_Desc"	"在 SteamVR 中，您可以與好友一同造訪真實存在的或是幻想虛擬的地點。"
+"[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
+"TutorialWelcome_Tile3_WinMR_Desc"	"請使用控制器上的選單鍵來開啟與關閉此選單。"
+"[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
+"TutorialTeleport_Tile1_WinMR_Desc"	"將搖桿往前壓以進行傳送。"
+"[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
+"TutorialTeleport_Tile2_WinMR_Desc"	"您將會看到一道弧線，弧線終點的地面上有一個綠色的圓圈。"
+"[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
+"TutorialTeleport_Tile3_WinMR_Desc"	"放開搖桿以傳送至綠色圓圈。"
+"[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
+"TutorialTeleport_WinMR_Bottom_Desc"	"所選傳送位置無效時，傳送標示將呈紅色。"
+"[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"來自《OVERTURN》的神祕女孩「MAGI」的全身模型。\n\n遊玩《OVERTURN》而解鎖。"
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
 }
 }
