--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
@@ -2187,7 +2187,7 @@
 "[english]VR_Map_SteamVRHome_Desc"	"A pavilion in the mountains."
 "VR_PhysicsProp_PyroVinyl001"	"Іграшковий палій"
 "[english]VR_PhysicsProp_PyroVinyl001"	"Pyro Toy"
-"VR_PhysicsProp_PyroVinyl001_Desc"	"Іграшковий палій із TF2."
+"VR_PhysicsProp_PyroVinyl001_Desc"	"Іграшковий палій із ТF2."
 "[english]VR_PhysicsProp_PyroVinyl001_Desc"	"The Pyro Toy from TF2."
 "VR_Furniture_Bench001"	"Лавка"
 "[english]VR_Furniture_Bench001"	"Bench"
@@ -3009,5 +3009,21 @@
 "[english]VR_Map_MountRainierCamp"	"Mount Rainier"
 "VR_Map_MountRainierCamp_Desc"	"Найвища гора у штаті Вашингтон, США."
 "[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"Єті"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"Згідно священного тибетського фольклору, благородний Єті мешкає у гімалайському регіоні Непалу. Згідно гри Team Fortress 2, ви знайдете його в Пекельних джунглях. Так що ж ця істота робить на горі штату Вашингтон?"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"Квест Єті"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"Знайдіть цього міфічного звіра, що переховується на горі Маунт-Рейнір."
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"Піца ‒ це життя!"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"Смакотні залишки викрадача.\n\nРозблоковано грою у Deserving Life."
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Торів молот"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Молот, що пасує богу.\n\nРозблоковано під час гри у Wrath of Loki VR Adventure."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
 }
 }
