--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -249,6 +249,29 @@
 		"VR_PhysicsProp_Fallout4BobbleHeadStrength_Desc"		"It's essential to give your arguments impact.\n\nUnlocked by playing Fallout 4 VR."
 		"VR_PhysicsProp_Fallout4BobbleHeadUnarmed"				"Vault Boy: Unarmed"
 		"VR_PhysicsProp_Fallout4BobbleHeadUnarmed_Desc"			"When words fail, there's always fists.\n\nUnlocked by playing Fallout 4 VR."
+		
+		"VR_PhysicsProp_HTCSnowmanBallA"			"Driftwood: Small snowball"
+		"VR_PhysicsProp_HTCSnowmanBallA_Desc"		"A small snowball for making snowy details, or for throwing at your friends.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanBallB"			"Driftwood: Medium snowball"
+		"VR_PhysicsProp_HTCSnowmanBallB_Desc"		"A medium-sized snowball for snowman heads. Remember to put a hat on top so he doesn't get cold!\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanBallC"			"Driftwood: Large snowball"
+		"VR_PhysicsProp_HTCSnowmanBallC_Desc"		"A large snowball for snowman bodies. You can also try throwing this at your friends.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanBase"				"Driftwood: Snow base"
+		"VR_PhysicsProp_HTCSnowmanBase_Desc"		"A portable, localised snowdrift for turning anywhere - from Hawaiian beaches to the top of Mount Rainier - into an outpost of winter.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanCarrot"			"Driftwood: Carrot"
+		"VR_PhysicsProp_HTCSnowmanCarrot_Desc"		"A snowman nose. Eating these may help you see in the dark.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanLights"			"Driftwood: Holiday Lights"
+		"VR_PhysicsProp_HTCSnowmanLights_Desc"		"Decorate your home for the holidays with these festive lights.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanPebbleA"			"Driftwood: Pebble A"
+		"VR_PhysicsProp_HTCSnowmanPebbleA_Desc"		"A pebble, for snowman eyes, teeth and buttons.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanPebbleB"			"Driftwood: Pebble B"
+		"VR_PhysicsProp_HTCSnowmanPebbleB_Desc"		"Another pebble, for snowman eyes, teeth and buttons.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs.."
+		"VR_PhysicsProp_HTCSnowmanTwigA"			"Driftwood: Twig A"
+		"VR_PhysicsProp_HTCSnowmanTwigA_Desc"		"A twig, for making arms, legs and other snowman limbs.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanTwigB"			"Driftwood: Twig B"
+		"VR_PhysicsProp_HTCSnowmanTwigB_Desc"		"Another twig, for making arms, legs and other snowman limbs.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
+		"VR_PhysicsProp_HTCSnowmanTwigC"			"Driftwood: Twig C"
+		"VR_PhysicsProp_HTCSnowmanTwigC_Desc"		"Yet another twig, for making arms, legs and other snowman limbs.\n\nFrom the 'Driftwood' Environment by Vive Creative Labs."
 
 	
 		// furniture
