--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_japanese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_japanese.txt
@@ -2339,9 +2339,9 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE アイテム"
+"HTCPromoTitle"	"VIVE 環境"
 "[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Vive アバターと小道具を忘れずチェックしよう。"
+"HTCPromoDesc"	"Vive Creative Labs が制作した環境「Driftwood」を探検しよう。"
 "[english]HTCPromoDesc"	"Explore Driftwood, an environment created by Vive Creative Labs."
 "ValvePromoTitle"	"VALVE 環境"
 "[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
@@ -2963,7 +2963,7 @@
 "[english]VR_PhysicsProp_RacketNxFigurine_Desc"	"A miniature figurine of the Racket: Nx's Alien Robot Lizard with Sound Activated Brain (TM).\n\n*Sound Activated Brain not included.\n\nUnlocked by playing Racket: Nx."
 "VR_Avatar_DuckHuntDogHead"	"犬の頭"
 "[english]VR_Avatar_DuckHuntDogHead"	"Dog Head"
-"VR_Avatar_DuckHuntDogHead_Desc"	"Duck Season のマスコットの犬の頭。最高のパーティグッズで顔を隠して友達を怖がらせよう。\n\nDuck Season をプレイしてアンロック。"
+"VR_Avatar_DuckHuntDogHead_Desc"	"Duck Season のマスコット犬の頭。パーティで素顔を隠すのにも、友達を怖がらせるのにも大活躍!\n\nDuck Season をプレイしてアンロック。"
 "[english]VR_Avatar_DuckHuntDogHead_Desc"	"Mascot head of the Duck Season Dog. Great for parties, masking your true face, or scaring your friends.\n\nUnlocked by playing Duck Season."
 "VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite アバター"
 "[english]VR_PhysicsProp_RezHeroFigurine"	"Rez Infinite Avatar"
@@ -2971,5 +2971,63 @@
 "[english]VR_PhysicsProp_RezHeroFigurine_Desc"	"The player avatar for the legendary action-shooter.\n\nUnlocked by playing Rez Infinite."
 "UGCHiddenLabel"	"ユーザー生成コンテンツは非表示です。設定から変更可能です。"
 "[english]UGCHiddenLabel"	"User generated content is hidden. You can change this in Settings."
+"VR_Avatar_Wearable_GornWingedHelmet"	"羽根つきヘルメット"
+"[english]VR_Avatar_Wearable_GornWingedHelmet"	"Winged Helmet"
+"VR_Avatar_Wearable_GornWingedHelmet_Desc"	"将軍の頭からもぎ取られた羽根つきヘルメット。臭いからして一度も洗っていない。GORN の剣闘士からの栄誉ある借り受け品。\n\nGORN をプレイしてアンロック。"
+"[english]VR_Avatar_Wearable_GornWingedHelmet_Desc"	"The Winged Helmet, torn from the head of 'The General' himself. Judging by smell, never been washed. Proudly on loan from a victorious GORN gladiator.\n\nUnlocked by playing GORN."
+"VR_Avatar_WindowsMR_Controllers"	"Windows MR コントローラ"
+"[english]VR_Avatar_WindowsMR_Controllers"	"Windows MR Controllers"
+"VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR コントローラ"
+"[english]VR_Avatar_WindowsMR_Controllers_Desc"	"Windows MR controllers"
+"TutorialWelcome_Tile1_WinMR_Desc"	"SteamVR へようこそ!"
+"[english]TutorialWelcome_Tile1_WinMR_Desc"	"Welcome to SteamVR!"
+"TutorialWelcome_Tile2_WinMR_Desc"	"SteamVR では、実在する場所や架空の場所をフレンドと一緒に訪れることができます。"
+"[english]TutorialWelcome_Tile2_WinMR_Desc"	"In SteamVR you can visit real and imaginary places with friends."
+"TutorialWelcome_Tile3_WinMR_Desc"	"メニューの開閉には、コントローラのメニューボタンを使います。"
+"[english]TutorialWelcome_Tile3_WinMR_Desc"	"To open and close this menu, use the menu button on your controller."
+"TutorialTeleport_Tile1_WinMR_Desc"	"テレポートするにはジョイスティックを前に押します。"
+"[english]TutorialTeleport_Tile1_WinMR_Desc"	"To teleport, push forward on the joystick."
+"TutorialTeleport_Tile2_WinMR_Desc"	"地面の緑色の円へとつながるアーク (弧) が見えるはずです。"
+"[english]TutorialTeleport_Tile2_WinMR_Desc"	"You will see an arc that ends with a green circle on the ground."
+"TutorialTeleport_Tile3_WinMR_Desc"	"ジョイスティックを放すと緑の円にテレポートします。"
+"[english]TutorialTeleport_Tile3_WinMR_Desc"	"Release the joystick to teleport to the green circle."
+"TutorialTeleport_WinMR_Bottom_Desc"	"テレポートできない場所へのアークは赤くなります。"
+"[english]TutorialTeleport_WinMR_Bottom_Desc"	"The teleport arc will turn red if you cannot teleport to that location."
+"VR_PhysicsProp_OverturnMagiFigurine"	"マギのフィギュア"
+"[english]VR_PhysicsProp_OverturnMagiFigurine"	"Magi Figure"
+"VR_PhysicsProp_OverturnMagiFigurine_Desc"	"OVERTURN の不思議な少女「マギ」の全身フィギュア。\n\nOVERTURN をプレイしてアンロック。"
+"[english]VR_PhysicsProp_OverturnMagiFigurine_Desc"	"Full body figurine of the mysterious girl 'MAGI' from OVERTURN.\n\nUnlocked by playing OVERTURN."
+"VR_Avatar_SmashboxArenaPoppyHead"	"洋ナシのポピー"
+"[english]VR_Avatar_SmashboxArenaPoppyHead"	"Poppy The Pear"
+"VR_Avatar_SmashboxArenaPoppyHead_Desc"	"向かうところ敵ナシ。\n\nSmashbox Arena をプレイしてアンロック。"
+"[english]VR_Avatar_SmashboxArenaPoppyHead_Desc"	"Pear-fection.\n\nUnlocked by playing Smashbox Arena."
+"VR_PhysicsProp_TiltBrushTiltasaurus"	"ティルトサウルス"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus"	"Tiltasaurus"
+"VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"近所に住む親切な 3D ペインティング恐竜。\n\n\n\nTilt Brush をプレイしてアンロック。"
+"[english]VR_PhysicsProp_TiltBrushTiltasaurus_Desc"	"Your friendly neighborhood 3D painting dinosaur.\n\nUnlocked by playing Tilt Brush."
+"VR_Map_MountRainierCamp"	"レーニア山"
+"[english]VR_Map_MountRainierCamp"	"Mount Rainier"
+"VR_Map_MountRainierCamp_Desc"	"アメリカ合衆国ワシントン州で最も高い山。"
+"[english]VR_Map_MountRainierCamp_Desc"	"The tallest mountain in Washington State, USA."
+"VR_PhysicsProp_TF2Yeti"	"イエティ"
+"[english]VR_PhysicsProp_TF2Yeti"	"Yeti"
+"VR_PhysicsProp_TF2Yeti_Desc"	"チベットの神聖な民間伝承によると、気高いイエティはネパールのヒマラヤ地帯に生息する。Team Fortress 2 によると、イエティは Jungle Inferno で見つかる。だとすると、ワシントン州の山中にいる浮浪者の正体は?"
+"[english]VR_PhysicsProp_TF2Yeti_Desc"	"According to sacred Tibetan folklore, the noble Yeti inhabits the Himalayan region of Nepal. According to Team Fortress 2, you'll find them in a Jungle Inferno. So what was its lumpen self doing up a mountain in Washington State?"
+"Quest_TF2Yeti"	"イエティクエスト"
+"[english]Quest_TF2Yeti"	"Yeti Quest"
+"Quest_TF2Yeti_Desc"	"レーニア山に潜んでいるこの神秘的な獣を探してください。"
+"[english]Quest_TF2Yeti_Desc"	"Find this mythical beast lurking up Mount Rainier."
+"VR_PhysicsProp_DeservingLifePizza"	"ピザは命!"
+"[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
+"VR_PhysicsProp_DeservingLifePizza_Desc"	"誘拐犯のおいしい食べ残し。\n\nDeserving Life をプレイしてアンロック。"
+"[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"トールのハンマー"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"神様にピッタリのハンマー。\n\nWrath of Loki VR Adventure をプレイしてアンロック。"
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"ヘルプ"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"SteamVR でスクリーンショットを撮影する方法"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
 }
 }
