--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_turkish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_turkish.txt
@@ -3023,5 +3023,23 @@
 "[english]VR_PhysicsProp_DeservingLifePizza"	"Pizza is Life!"
 "VR_PhysicsProp_DeservingLifePizza_Desc"	"Adam kaçıranın lezzetli bir yemek artığı.\n\nDeserving Life oynayarak açıldı."
 "[english]VR_PhysicsProp_DeservingLifePizza_Desc"	"A delicious leftover from the kidnapper.\n\nUnlocked by playing Deserving Life."
+"VR_PhysicsProp_WrathOfLokiHammer"	"Thor'un Çekici"
+"[english]VR_PhysicsProp_WrathOfLokiHammer"	"Thor's Hammer"
+"VR_PhysicsProp_WrathOfLokiHammer_Desc"	"Bir tanrıya uygun bir çekiç.\n\nWrath of Loki VR Adventure oynayarak açıldı."
+"[english]VR_PhysicsProp_WrathOfLokiHammer_Desc"	"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
+"ScreenshotTutorialButton"	"Yardım"
+"[english]ScreenshotTutorialButton"	"Help"
+"ScreenshotTutorialTitle"	"SteamVR'da Ekran Görüntüsü Nasıl Alınır?"
+"[english]ScreenshotTutorialTitle"	"How to Take Screenshots in SteamVR"
+"ScreenshotTutorialVive"	"Oyundayken bir ekran görüntüsü almak için, Sistem ve Tetik butonlarına aynı anda basın.\n\nOyundan çıktığınızda Steam Ekran Görüntüsü Yöneticisi arayüzü karşınıza çıkacaktır ve buradan ekran görüntülerinizi herkese açık olarak paylaşabileceksiniz."
+"[english]ScreenshotTutorialVive"	"To take a screenshot while in a game, press the System and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialWinMR"	"Oyundayken bir ekran görüntüsü almak için, Sol Analog Çubuğuna ve Tetik butonlarına aynı anda basın.\n\nOyundan çıktığınızda Steam Ekran Görüntüsü Yöneticisi arayüzü karşınıza çıkacaktır ve buradan ekran görüntülerinizi herkese açık olarak paylaşabileceksiniz."
+"[english]ScreenshotTutorialWinMR"	"To take a screenshot while in a game, press the Left Thumbstick and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotTutorialVTouch"	"Oyundayken bir ekran görüntüsü almak için, Sol Menü ve Tetik butonlarına aynı anda basın.\n\nOyundan çıktığınızda Steam Ekran Görüntüsü Yöneticisi arayüzü karşınıza çıkacaktır ve buradan ekran görüntülerinizi herkese açık olarak paylaşabileceksiniz."
+"[english]ScreenshotTutorialVTouch"	"To take a screenshot while in a game, press the Left Menu and Trigger buttons at the same time.\n\nOnce you've quit the game, you will be presented with the Steam Screenshot Manager interface, where you’ll be able to share the screenshots publicly."
+"ScreenshotsFirstTimeText"	"Henüz herkese açık herhangi bir ekran görüntüsü paylaşmadığınız görünüyor. \n\nEkran görüntülerini paylaşmak için, oyun içi ekran görüntüsü alın, daha sonra Ekran Görüntüsü Yöneticisi ile Steam'de herkese açık bir şekilde paylaşın. VR'da nasıl ekran görüntüsü alınacağı hakkında daha fazla bilgi için yukarıdaki \"Yardım\" seçeneğini seçin. \n\nAyrıca yukarıdaki \"Topluluktan\" sekmesini kullanarak topluluğun paylaştığı popüler ekran görüntüleri görebilir ve kullanabilirsiniz."
+"[english]ScreenshotsFirstTimeText"	"It looks like you haven't shared any public screenshots yet. \n\nTo share screenshots, take a screenshot in-game, then use the Screenshot Manager to share it on Steam publicly. Select 'Help' above to learn how to take screenshots in VR. \n\nYou can also select the 'From Community' tab above to view and use popular public screenshots from the community."
+"ArtworkFirstTimeText"	"Henüz herkese açık herhangi bir çizim paylaşmadığınız görünüyor. \n\nSteamVR Ev'e çizimlerinizi getirmek için çiziminizi bir oyunun Topluluk Merkezi'nden Steam'E yüklemeniz ve herkese açık olarak paylaşmanız gerekecektir. \n\nAyrıca yukarıdaki \"Topluluktan\" sekmesini kullanarak topluluğun paylaştığı popüler çizimleri görebilir ve kullanabilirsiniz."
+"[english]ArtworkFirstTimeText"	"It looks like you haven't shared any public artwork yet. \n\nTo bring your artwork into SteamVR Home, you will need to upload your artwork to Steam from a game's Community Hub and make it publicly viewable.\n\nYou can also select the 'From Community' tab above to view and use popular public artwork from the community."
 }
 }
